# l15-core

./: .gitignore  .gitmodules  COPYING  Dockerfile.build_python_plugin  Makefile.am  README.md  autogen.sh  build_plugin.sh  confdefs.h  configure.ac  configure~  emconfigure_wrapper.sh  emmake_wrapper.sh
build-aux/m4/: ax_subdirs_configure.m4  ax_zmq.m4  tbb.m4
contrib/: Makefile.am
contrib/catch/: catch.hpp
contrib/cex/: algorithm.hpp  async_result.hpp  cex_defs.hpp  fixsizevector.hpp  safe_ptr.hpp  smartinserter.hpp  subscription.hpp  wrapstream.hpp
pybind/: Makefile.am  l15-core-pybind.cpp  l15-core-pybind.hpp  l15-core-pybind.i  l15Core.i  libl15-core-pybind_wrap.c
src/: Makefile.am  cli.cpp  common.hpp  common_frost.hpp  wasm_plugin.cpp
src/api/: Makefile.am  chain_api.cpp  chain_api.hpp  exechelper.cpp  exechelper.hpp  signer_api.cpp  wallet_api.cpp  wallet_api.hpp
src/app/: Makefile.am  signing_mgr.cpp  signing_mgr.hpp
src/cex/: smartinserter.hpp
src/common/: Makefile.am  common.cpp  common.hpp  common_error.hpp  utils.cpp  utils.hpp  version.hpp
src/core/: Makefile.am  chain_api.cpp  chain_api.hpp  channel.cpp  channel.hpp  channel_contract.cpp  channel_contract.hpp  channel_keys.cpp  channel_keys.hpp  common.hpp  common_api.hpp  core_error.hpp  exechelper.cpp  exechelper.hpp  hash_helper.hpp  key_factory.cpp  key_factory.hpp  master_key.cpp  master_key.hpp  script_merkle_tree.cpp  script_merkle_tree.hpp  signer_api.cpp  signer_api.hpp  signer_service.cpp  signer_service.hpp  transaction.cpp  transaction.hpp  utils.cpp  utils.hpp  wallet_api.cpp  wallet_api.hpp
src/frost/: Makefile.am  frost_common.hpp  frost_signer.cpp  frost_signer.hpp  frost_sm.cpp  frost_sm.hpp  frost_steps.cpp  frost_steps.hpp
src/inscribeit/: Makefile.am  contract_builder.cpp  contract_builder.hpp  contract_error.hpp  create_inscription.cpp  create_inscription.hpp  fee_calculator.cpp  fee_calculator.hpp  inscription.cpp  inscription.hpp  inscription_common.hpp  swap_inscription.cpp  swap_inscription.hpp
src/p2p/: frost.hpp  link.hpp  p2p_frost.hpp  p2p_link.hpp  p2p_protocol.hpp  protocol.hpp
src/python_binding/: Makefile.am  Readme.md  __init__.py  l15-core-pybind.cpp  l15-core-pybind.hpp  l15-core-pybind.i  python_exception.hpp
src/service/: Makefile.am  generic_service.cpp  generic_service.hpp  onchain_protocol.cpp  onchain_protocol.hpp  onchain_service.cpp  onchain_service.hpp  p2p_service.cpp  p2p_service.hpp  signer_service.cpp  signer_service.hpp  storage_service.cpp  storage_service.hpp  zmq_context.cpp  zmq_context.hpp
src/tools/: Makefile.am  config.cpp  config.hpp  nodehelper.cpp  nodehelper.hpp
src/wasm/: Makefile.am  configure.ac  ord_plugin.cpp
src/wasm_binding/: Makefile.am  inscribeit.idl  l15.cpp  utxord.cpp
test/: Makefile.am  make-config.pl  signer.cpp  test_case_wrapper.hpp  test_ptlc.cpp  testutils.hpp  time_measure.hpp  zmq_service.cpp  zmq_service.hpp
test/core/: Makefile.am  local_link.hpp  test_derive_key.cpp  test_key_factory.cpp  test_node.cpp  test_ptlc.cpp  test_suite_node.hpp  test_taproot.cpp  test_taptree.cpp  test_threshold_sign.cpp
test/frost/: Makefile.am  test_frost_onchain_signer.cpp  test_frost_signer.cpp
test/inscribeit/: Makefile.am  test_contract_builder.cpp  test_create_inscription.cpp  test_fee_estimation.cpp  test_swap_inscription.cpp
test/p2p/: Makefile.am  test_p2p_frost.cpp  test_p2p_onchain_frost.cpp
test/python_module/: exception_test.py
test/service/: Makefile.am  test_generic_service.cpp  test_onchain_service.cpp  test_onchain_writing.cpp  test_signer_service.cpp
test/src/: local_link.hpp  test_node.cpp  test_ptlc.cpp  test_suite_channel.hpp  test_suite_node.hpp  test_taproot.cpp  test_taptree.cpp  test_threshold_sign.cpp
test/test-node/mainnet/: l15.conf
test/test-node/regtest/: l15.conf
test/test-node/regtest/bitcoin/: bitcoin.conf
test/test-node/regtest/l15node/: l15node.conf
test/test-node/testnet/: l15.conf
test/testlib/: Makefile.am  onchain_net_service.cpp  onchain_net_service.hpp  zmq_service.cpp  zmq_service.hpp
test/testlib-onchain/: Makefile.am  onchain_net_service.cpp  onchain_net_service.hpp
